# TouhouSDK

./: CMakeLists.txt  main.cpp
ScarletDevilKingdom/handler/: SDL2_handler.cpp  SDL2_handler.h  runGame.cpp  runGame.h
